Added POD code for the_well

--- a/notebooks/the_well_rsvd.ipynb
+++ b/notebooks/the_well_rsvd.ipynb
@@ -24,6 +24,7 @@
    "outputs": [],
    "source": [
     "\n",
+    "import sys\n",
     "import pprint as pp\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -38,132 +39,24 @@
     "from the_well.data import WellDataset\n",
     "from torch.utils.data import DataLoader\n",
     "\n",
+    "# Add the project root directory to Python path\n",
+    "project_root = Path.cwd().parent\n",
+    "sys.path.insert(0, str(project_root.absolute()))\n",
+    "\n",
+    "from src.helpers import *\n",
+    "\n",
     "debug = True\n",
-    "n_rank = 50\n",
     "n_iters = 5\n",
     "dataset = 'planetswe'\n",
     "n_steps = {'planetswe': 1008, 'active_matter': 81}\n",
+    "n_rank = {'active_matter': 50, 'planetswe': 75}\n",
+    "\n",
+    "save_dir = project_root / 'datasets' / 'the_well_custom' / dataset\n",
+    "save_dir.mkdir(exist_ok=True, parents=True)\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "%matplotlib inline\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "mae = lambda datatrue, datapred: (datatrue - datapred).abs().mean()\n",
-    "mse = lambda datatrue, datapred: (datatrue - datapred).pow(2).sum(axis = -1).mean()\n",
-    "mre = lambda datatrue, datapred: ((datatrue - datapred).pow(2).sum(axis = -1).sqrt() / (datatrue).pow(2).sum(axis = -1).sqrt()).mean()\n",
-    "num2p = lambda prob : (\"%.2f\" % (100*prob)) + \"%\"\n",
-    "\n",
-    "def min_max_scale(tensor, feature_range=(0, 1)):\n",
-    "    \"\"\"\n",
-    "    Scale a tensor to a given feature range using min-max normalization.\n",
-    "    \n",
-    "    Args:\n",
-    "        tensor (torch.Tensor): Input tensor to be scaled\n",
-    "        feature_range (tuple): Desired range of transformed data (default: (0, 1))\n",
-    "        \n",
-    "    Returns:\n",
-    "        torch.Tensor: Scaled tensor\n",
-    "        tuple: (min, max) values used for scaling (for inverse transformation)\n",
-    "    \"\"\"\n",
-    "    # Ensure the input is a tensor\n",
-    "    if not isinstance(tensor, torch.Tensor):\n",
-    "        tensor = torch.tensor(tensor, dtype=torch.float32)\n",
-    "    \n",
-    "    # Calculate min and max\n",
-    "    t_min = tensor.min()\n",
-    "    t_max = tensor.max()\n",
-    "    \n",
-    "    # Avoid division by zero\n",
-    "    t_range = t_max - t_min\n",
-    "    if t_range == 0:  # all values are the same\n",
-    "        t_range = 1\n",
-    "    \n",
-    "    # Scale to [0, 1] first\n",
-    "    scaled = (tensor - t_min) / t_range\n",
-    "    \n",
-    "    # Then scale to feature_range\n",
-    "    min_range, max_range = feature_range\n",
-    "    scaled = scaled * (max_range - min_range) + min_range\n",
-    "    \n",
-    "    return scaled, (t_min, t_max)\n",
-    "\n",
-    "def inverse_min_max_scale(scaled_tensor, original_min_max, feature_range=(0, 1)):\n",
-    "    \"\"\"\n",
-    "    Inverse transformation of min-max scaling.\n",
-    "    \n",
-    "    Args:\n",
-    "        scaled_tensor (torch.Tensor): Scaled tensor to transform back\n",
-    "        original_min_max (tuple): (min, max) values from original scaling\n",
-    "        feature_range (tuple): Range used in original scaling (default: (0, 1))\n",
-    "        \n",
-    "    Returns:\n",
-    "        torch.Tensor: Tensor in original scale\n",
-    "    \"\"\"\n",
-    "    t_min, t_max = original_min_max\n",
-    "    min_range, max_range = feature_range\n",
-    "    \n",
-    "    # First scale back to [0, 1] range\n",
-    "    normalized = (scaled_tensor - min_range) / (max_range - min_range)\n",
-    "    \n",
-    "    # Then scale back to original range\n",
-    "    original = normalized * (t_max - t_min) + t_min\n",
-    "    \n",
-    "    return original\n",
-    "\n",
-    "def create_mats(the_well_data, combine_all=False, debug=False):\n",
-    "    im_shape = the_well_data[0][\"input_fields\"].shape\n",
-    "    n_steps, im_rows, im_cols, im_dim = im_shape[0], im_shape[1], im_shape[2], im_shape[3]\n",
-    "\n",
-    "    mats = []\n",
-    "    for i in range(len(the_well_data)):\n",
-    "        data = rearrange(the_well_data[i][\"input_fields\"], \"t r c d -> t (r c d)\", t=n_steps, r=im_rows, c=im_cols, d=im_dim)\n",
-    "        mats.append(data)\n",
-    "        if debug:\n",
-    "            break\n",
-    "    if combine_all:\n",
-    "        mats = [torch.cat(mats, dim=0)]\n",
-    "    return mats\n",
-    "\n",
-    "def generate_SVDs(mats, n_rank=50, n_iters=2):\n",
-    "    Us, Ss, Vs = ([], [], [])\n",
-    "    for mat in mats:\n",
-    "        U, S, V = torch.svd_lowrank(mat, n_rank, n_iters)\n",
-    "        Us.append(U)\n",
-    "        Ss.append(S)\n",
-    "        Vs.append(V)\n",
-    "    return Us, Ss, Vs\n",
-    "\n",
-    "def create_pods(mats, V_mats):\n",
-    "    pods = []\n",
-    "    for mat, V in zip(mats, V_mats):\n",
-    "        pod = mat @ V\n",
-    "        pods.append(pod)\n",
-    "    return pods\n",
-    "\n",
-    "def scale_pods(pods):\n",
-    "    pods_scaled = []\n",
-    "    scalers_l = []\n",
-    "    for pod in pods:\n",
-    "        pod_scaled, scalers = min_max_scale(pod)\n",
-    "        pods_scaled.append(pod_scaled)\n",
-    "        scalers_l.append(scalers)\n",
-    "    return pods_scaled, scalers_l\n",
-    "\n",
-    "def inverse_pod(pods_scaled, scalers_l, V_mats):\n",
-    "    mats_hat = []\n",
-    "    for pod_scaled, scalers, V_mat in zip(pods_scaled, scalers_l, V_mats):\n",
-    "        mat_hat = inverse_min_max_scale(pod_scaled, scalers)\n",
-    "        mat_hat = mat_hat @ V_mat.T\n",
-    "        mats_hat.append(mat_hat)\n",
-    "    return mats_hat\n"
    ]
   },
   {
@@ -175,9 +68,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1008, 256, 512, 3])\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Load data from online, when using in practice we'll have to download the dataset\n",
@@ -208,6 +109,9 @@
     "    use_normalization=False,\n",
     ")\n",
     "\n",
+    "im_shape = train_data[0]['input_fields'].shape\n",
+    "im_rows, im_cols, im_dim = im_shape[1], im_shape[2], im_shape[3]\n",
+    "print(im_shape)\n",
     "\n"
    ]
   },
@@ -220,6 +124,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "torch.Size([1008, 393216])\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "combine_all = False\n",
+    "train_mats_raw = create_mats(train_data, combine_all=combine_all, debug=debug)\n",
+    "valid_mats_raw = create_mats(valid_data, combine_all=combine_all, debug=debug)\n",
+    "test_mats_raw = create_mats(test_data, combine_all=combine_all, debug=debug)\n",
+    "\n",
+    "print(len(train_mats_raw))\n",
+    "print(train_mats_raw[0].shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -227,22 +156,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([1008, 393216])\n",
-      "torch.Size([1008, 393216])\n",
-      "torch.Size([1008, 393216])\n"
+      "torch.Size([3024, 393216])\n"
      ]
     }
    ],
    "source": [
+    "full_mat = torch.cat(train_mats_raw + valid_mats_raw + test_mats_raw)\n",
     "\n",
-    "combine_all = True\n",
-    "train_mats = create_mats(train_data, combine_all=combine_all, debug=debug)\n",
-    "valid_mats = create_mats(valid_data, combine_all=combine_all, debug=debug)\n",
-    "test_mats = create_mats(test_data, combine_all=combine_all, debug=debug)\n",
-    "\n",
-    "print(train_mats[0].shape)\n",
-    "print(valid_mats[0].shape)\n",
-    "print(test_mats[0].shape)\n"
+    "print(full_mat.shape)"
    ]
   },
   {
@@ -259,9 +180,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "U_trains, S_trains, V_trains = generate_SVDs(train_mats, n_rank=n_rank, n_iters=n_iters)\n",
-    "U_valids, S_valids, V_valids = generate_SVDs(valid_mats, n_rank=n_rank, n_iters=n_iters)\n",
-    "U_tests, S_tests, V_tests = generate_SVDs(test_mats, n_rank=n_rank, n_iters=n_iters)\n"
+    "U_full, S_full, V_full = generate_SVD(full_mat, n_rank=n_rank[dataset], n_iters=n_iters)\n"
    ]
   },
   {
@@ -273,17 +192,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([1008, 50])\n"
+      "torch.Size([3024, 75])\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "train_pods = create_pods(train_mats, V_trains)\n",
-    "valid_pods = create_pods(valid_mats, V_valids)\n",
-    "test_pods = create_pods(test_mats, V_tests)\n",
+    "full_pod = create_pod(full_mat, V_full)\n",
     "\n",
-    "print(train_pods[0].shape)\n"
+    "print(full_pod.shape)\n"
    ]
   },
   {
@@ -293,9 +210,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "train_pods_scaled, train_scalers = scale_pods(train_pods)\n",
-    "valid_pods_scaled, valid_scalers = scale_pods(valid_pods)\n",
-    "test_pods_scaled, test_scalers = scale_pods(test_pods)\n"
+    "full_pod_scaled, full_scaler = scale_pod(full_pod)\n"
    ]
   },
   {
@@ -312,9 +227,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "train_mats_hat = inverse_pod(train_pods_scaled, train_scalers, V_trains)\n",
-    "valid_mats_hat = inverse_pod(valid_pods_scaled, valid_scalers, V_valids)\n",
-    "test_mats_hat = inverse_pod(test_pods_scaled, test_scalers, V_tests)\n"
+    "full_mat_hat = inverse_pod(full_pod_scaled, full_scaler, V_full)\n"
    ]
   },
   {
@@ -334,29 +247,198 @@
      "output_type": "stream",
      "text": [
       "Training POD errors:\n",
-      "Error for i=0 is 1.34%\n",
-      "\n",
-      "Validation POD errors:\n",
-      "Error for i=0 is 1.45%\n",
-      "\n",
-      "Testing POD errors:\n",
-      "Error for i=0 is 1.18%\n",
+      "Error for i=0 is 3.37%\n",
       "\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "def print_errors(true_l, pred_l, error_f, title):\n",
-    "    print(title)\n",
-    "    for i, (true, pred) in enumerate(zip(true_l, pred_l)):\n",
-    "        print(f\"Error for i={i} is {num2p(error_f(true, pred))}\")\n",
-    "    print()\n",
-    "\n",
-    "print_errors(train_mats, train_mats_hat, mre, \"Training POD errors:\")\n",
-    "print_errors(valid_mats, valid_mats_hat, mre, \"Validation POD errors:\")\n",
-    "print_errors(test_mats, test_mats_hat, mre, \"Testing POD errors:\")\n"
+    "print_errors([full_mat], [full_mat_hat], mean_relative_error, \"Training POD errors:\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Separate into Training, Validation, and Testing Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train_num 806\n",
+      "valid_num 100\n",
+      "test_num 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "total_tracks = int(full_mat.shape[0] / n_steps[dataset])\n",
+    "\n",
+    "train_num = int(0.8*n_steps[dataset])\n",
+    "valid_num = int(0.1*n_steps[dataset])\n",
+    "test_num = int(0.1*n_steps[dataset])\n",
+    "\n",
+    "print(\"train_num\", train_num)\n",
+    "print(\"valid_num\", valid_num)\n",
+    "print(\"test_num\", test_num)\n",
+    "\n",
+    "train_save = []\n",
+    "valid_save = []\n",
+    "test_save = []\n",
+    "\n",
+    "train_pods_save = []\n",
+    "valid_pods_save = []\n",
+    "test_pods_save = []\n",
+    "\n",
+    "for track_num in range(total_tracks):\n",
+    "    track_pod_scaled = full_pod_scaled[track_num*n_steps[dataset]:(track_num+1)*n_steps[dataset],:]\n",
+    "    track = full_mat[track_num*n_steps[dataset]:(track_num+1)*n_steps[dataset],:]\n",
+    "\n",
+    "    train_pod_scaled = track_pod_scaled[0:train_num]\n",
+    "    valid_pod_scaled = track_pod_scaled[train_num:train_num+valid_num]\n",
+    "    test_pod_scaled = track_pod_scaled[train_num+valid_num:]\n",
+    "\n",
+    "    train = track[0:train_num]\n",
+    "    val = track[train_num:train_num+valid_num]\n",
+    "    test = track[train_num+valid_num:]\n",
+    "\n",
+    "    train_pods_save.append(train_pod_scaled)\n",
+    "    valid_pods_save.append(valid_pod_scaled)\n",
+    "    test_pods_save.append(test_pod_scaled)\n",
+    "\n",
+    "    train_save.append(train)\n",
+    "    valid_save.append(val)\n",
+    "    test_save.append(test)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calculate Per-Track and Per-Split Errors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train POD errors:\n",
+      "Error for i=0 is 3.30%\n",
+      "Error for i=1 is 3.49%\n",
+      "Error for i=2 is 3.17%\n",
+      "\n",
+      "Validation POD errors:\n",
+      "Error for i=0 is 3.16%\n",
+      "Error for i=1 is 4.23%\n",
+      "Error for i=2 is 2.97%\n",
+      "\n",
+      "Testing POD errors:\n",
+      "Error for i=0 is 3.37%\n",
+      "Error for i=1 is 4.83%\n",
+      "Error for i=2 is 3.01%\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "train_save_hat = inverse_pods(train_pods_save, full_scaler, V_full)\n",
+    "print_errors(train_save, train_save_hat, mean_relative_error, \"Train POD errors:\")\n",
+    "\n",
+    "valid_save_hat = inverse_pods(valid_pods_save, full_scaler, V_full)\n",
+    "print_errors(valid_save, valid_save_hat, mean_relative_error, \"Validation POD errors:\")\n",
+    "\n",
+    "test_save_hat = inverse_pods(test_pods_save, full_scaler, V_full)\n",
+    "print_errors(test_save, test_save_hat, mean_relative_error, \"Testing POD errors:\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save Results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Create directories\n",
+    "(save_dir / 'metadata').mkdir(exist_ok=True)\n",
+    "(save_dir / 'full').mkdir(exist_ok=True)\n",
+    "(save_dir / 'pod').mkdir(exist_ok=True)\n",
+    "\n",
+    "# Save scaler, V_full, and image metadata\n",
+    "torch.save(V_full, save_dir / 'metadata' / 'V.pt')\n",
+    "torch.save(full_scaler, save_dir / 'metadata' / 'scaler.pt')\n",
+    "torch.save((im_rows, im_cols, im_dim), save_dir / 'metadata' / 'im_dims.pt')\n",
+    "\n",
+    "# Save full and pod tracks\n",
+    "for i in range(total_tracks):\n",
+    "    torch.save(train_save[i], save_dir / 'full' / f'train_{i}.pt')\n",
+    "    torch.save(train_pods_save[i], save_dir / 'pod' / f'train_{i}.pt')\n",
+    "    torch.save(valid_save[i], save_dir / 'full' / f'valid_{i}.pt')\n",
+    "    torch.save(valid_pods_save[i], save_dir / 'pod' / f'valid_{i}.pt')\n",
+    "    torch.save(test_save[i], save_dir / 'full' / f'test_{i}.pt')\n",
+    "    torch.save(test_pods_save[i], save_dir / 'pod' / f'test_{i}.pt')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example Loading"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([806, 393216])\n",
+      "torch.Size([806, 256, 512, 3])\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "train_loaded = torch.load(save_dir / 'full' / 'train_0.pt', weights_only=False)\n",
+    "im_rows, im_cols, im_dim = torch.load(save_dir / 'metadata' / 'im_dims.pt', weights_only=False)\n",
+    "print(train_loaded.shape)\n",
+    "train_loaded_shaped = rearrange(train_loaded, \"t (r c d) -> t r c d\", t=int(n_steps[dataset]*0.8), r=im_rows, c=im_cols, d=im_dim)\n",
+    "print(train_loaded_shaped.shape)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
