POD generator modified - need to try generating full dataset

--- a/notebooks/the_well_rsvd.ipynb
+++ b/notebooks/the_well_rsvd.ipynb
@@ -45,7 +45,7 @@
     "\n",
     "from src.helpers import *\n",
     "\n",
-    "debug = True\n",
+    "debug = False\n",
     "n_iters = 5\n",
     "dataset = 'planetswe'\n",
     "n_steps = {'planetswe': 1008, 'active_matter': 81}\n",
@@ -124,15 +124,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
+      "96\n",
       "torch.Size([1008, 393216])\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -149,17 +160,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([3024, 393216])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "full_mat = torch.cat(train_mats_raw + valid_mats_raw + test_mats_raw)\n",
     "\n",
@@ -239,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
